# autoresearch

./: README.md  eval.py  prepare.py  program.md  pyproject.toml
