# Personal fork for experimenting with pretraining research
# Original: https://github.com/karpathy/autoresearch

[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous pretraining research swarm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kernels>=0.11.7",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch==2.9.1",
    "tqdm>=4.67.0",
]

[project.optional-dependencies]
# Extras I find useful for local experimentation and debugging
dev = [
    "ipython>=8.0.0",
    "rich>=13.0.0",
    "ipdb>=0.13.0",  # prefer ipdb over pdb for nicer tracebacks
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
